--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+*,
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Inter;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  background-color: #222;
+}
+
+body {
+  background-color: crimson;
+}
+
+p {
+  word-break: break-all;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.text-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  display: grid;
+  place-items: center;
+  width: 100vw;
+}
+
+.text {
+  color: white;
+  font-weight: bold;
+  font-size: 20vh;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 0px 50px rgba(0, 0, 0, 0.5);
 }
